force-app/main/default/objects/Shipment_Temperature__c/Shipment_Temperature__c.object-meta.xml
<CustomObject>
    <label>Shipment Temperature</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Shipment Temperature Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Temperatures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>