force-app/main/default/objects/Shipment_Temperature__c/fields/ReadingTimestamp__c.field-meta.xml
<CustomField>
    <fullName>ReadingTimestamp__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>ReadingTimestamp</label>
    <type>DateTime</type>
</CustomField>