force-app/main/default/objects/Shipment_Temperature__c/fields/ShipmentID__c.field-meta.xml
<CustomField>
    <fullName>ShipmentID__c</fullName>
    <label>ShipmentID</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>