force-app/main/default/objects/Shipment_Temperature__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ShipmentID__c</columns>
    <columns>Temperature__c</columns>
    <columns>ReadingTimestamp__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>